# rust-calendar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENT_PLAN.md  GOOGLE_SYNC_PLAN.md  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING_CHECKLIST.md  build.rs  manifest.rc  rust-toolchain.toml
.github/: TCTBP Agent.md  TCTBP Cheatsheet.md  TCTBP.json  TCTBP_STATE.json  copilot-instructions.md
.github/agents/: TCTBP.agent.md
.github/prompts/: Install TCTBP Agent Infrastructure Into Another Repository.prompt.md
archive/: ARCHITECTURE.md  EGUI_MIGRATION.md  FUTURE_ENHANCEMENTS.md  MODULARITY.md  MY_DAY_AND_RIBBON_FEATURES.md  PROJECT_PLAN.md  TESTING.md  UI_FEATURES_UPDATE.md  UI_SYSTEM.md  countdown-container-plan.md  feature-settings-database-summary.md
assets/icons/: README.md
assets/themes/: dark.toml  light.toml
benches/: recurrence_bench.rs
docs/: ARCHITECTURE.md  COUNTDOWN_TIMER_FEATURE.md  EGUI_MIGRATION.md  FEATURES.md  FUTURE_ENHANCEMENTS.md  GOOGLE_CALENDAR_STAGE1_ROADMAP.md  GOOGLE_CALENDAR_STAGE1_SLICES.md  GOOGLE_CALENDAR_STAGE2_OPERATIONS.md  GOOGLE_OAUTH_SETUP.md  MY_DAY_AND_RIBBON_FEATURES.md  PROJECT_PLAN.md  README.md  SYSTEM_TRAY_IMPLEMENTATION.md  TESTING.md  UI_FEATURES_UPDATE.md  UI_SYSTEM.md  UPDATES.md  USER_GUIDE.md  countdown-container-plan.md  database-integration.md
docs/archive/: EGUI_MIGRATION.md  UPDATES.md  database-integration.md  feature-settings-database-summary.md
examples/: reset_container_geometry.rs  verify_persistence.rs
packaging/: install-windows.ps1  install.sh  rust-calendar.desktop
scripts/: install-linux-build-deps.sh
src/: lib.rs  main.rs
src/models/: mod.rs
src/models/calendar_source/: mod.rs
src/models/category/: mod.rs
src/models/event/: mod.rs
src/models/event_sync_map/: mod.rs
src/models/google_account/: mod.rs
src/models/outbound_sync_operation/: mod.rs
src/models/recurrence/: mod.rs
src/models/reminder/: mod.rs
src/models/settings/: mod.rs
src/models/sync_conflict/: mod.rs
src/models/template/: mod.rs
src/models/ui/: mod.rs
src/services/: mod.rs  theme.rs
src/services/backup/: mod.rs
src/services/calendar_sync/: engine.rs  fetcher.rs  google_api.rs  mapping.rs  mod.rs  sanitizer.rs  scheduler.rs
src/services/category/: mod.rs
src/services/countdown/: layout.rs  layout_export.rs  mod.rs  models.rs  notifications.rs  palette.rs  persistence.rs  repository.rs  repository_categories.rs  repository_settings.rs  repository_templates.rs  service.rs  storage.rs  sync.rs  visuals.rs
src/services/database/: connection.rs  migrations.rs  mod.rs  schema.rs  schema_countdown.rs
src/services/event/: crud.rs  mod.rs  queries.rs  shared.rs
src/services/google_account/: mod.rs
src/services/icalendar/: export.rs  import.rs  mod.rs  service.rs  utils.rs
src/services/notification/: mod.rs
src/services/outbound_sync/: mod.rs
src/services/pdf/: mod.rs  service.rs
src/services/reminder/: mod.rs
src/services/settings/: mapper.rs  mod.rs  service.rs
src/services/sync_conflict/: mod.rs
src/services/template/: mod.rs
src/services/theme/: mapper.rs  mod.rs  service.rs
src/ui/: app.rs  helpers.rs  messages.rs  mod.rs  theme.rs  view_type.rs
src/ui/app/: mod.rs  state.rs  update.rs  view.rs
src/ui/components/: menu_bar.rs  mod.rs  view_builder.rs
src/ui/dialogs/: color_picker.rs  date_picker.rs  event_dialog.rs  mod.rs  settings.rs  theme_creator.rs  theme_manager.rs  theme_picker.rs
src/ui/utils/: initialization.rs  mod.rs  settings_saver.rs
src/ui/views/: day_view.rs  mod.rs  month_view.rs  quarter_view.rs  week_view.rs  workweek_view.rs
src/ui_egui/: app.rs  drag.rs  event_dialog.rs  mod.rs  resize.rs  resize_drawing.rs  settings_calendar_sync.rs  settings_dialog.rs  theme.rs  theme_picker.rs  theme_presets.rs  tray.rs
src/ui_egui/app/: confirm.rs  context.rs  geometry.rs  imports.rs  lifecycle.rs  menu.rs  menu_export.rs  menu_help.rs  navigation.rs  notifications.rs  shortcuts.rs  sidebar.rs  state.rs  status_bar.rs  sync_guard.rs  sync_scheduler.rs  toast.rs  tray.rs
src/ui_egui/commands/: mod.rs
src/ui_egui/dialogs/: backup_manager.rs  category_manager.rs  countdown_category_manager.rs  countdown_template_manager.rs  export_dialog.rs  mod.rs  search_dialog.rs  template_manager.rs  theme_creator.rs  theme_dialog.rs  theme_manager.rs
src/ui_egui/event_dialog/: recurrence.rs  render.rs  render_date_time.rs  render_recurrence.rs  state.rs  state_persistence.rs  widgets.rs
src/ui_egui/views/: day_context_menu.rs  day_event_rendering.rs  day_time_slot.rs  day_view.rs  event_helpers.rs  event_rendering.rs  mod.rs  month_context_menu.rs  month_day_cell.rs  month_view.rs  palette.rs  quarter_view.rs  time_grid.rs  time_grid_cell.rs  time_grid_context_menu.rs  types.rs  utils.rs  week_shared.rs  week_view.rs  workweek_view.rs
src/utils/: mod.rs  monitors.rs
src/utils/date/: mod.rs
tests/: integration_test.rs
tests/fixtures/: mod.rs
tests/property/: recurrence_properties.rs
(+25 files in other folders)
