[package]
name = "rust-calendar"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern Windows desktop calendar application with theming and event management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-calendar"
keywords = ["calendar", "gui", "desktop", "events", "windows"]
categories = ["gui", "date-and-time"]

[dependencies]
# GUI Framework - Using iced for modern reactive UI
iced = { version = "0.12", features = ["tokio", "image"] }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Recurrence rules (RFC 5545)
rrule = "0.11"

# Windows notifications
windows = { version = "0.54", features = [
    "Win32_UI_Notifications",
    "Win32_UI_Shell",
    "Win32_Foundation"
] }
notify-rust = "4.10"

# iCalendar support
ical = "0.10"

# Configuration
toml = "0.8"
directories = "5.0"

# File handling
walkdir = "2.4"                  # Directory traversal

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
# Testing frameworks
mockall = "0.12"                 # Mocking framework
tempfile = "3.10"                # Temporary files for tests
proptest = "1.4"                 # Property-based testing
test-case = "3.3"                # Parameterized tests

# Test utilities
pretty_assertions = "1.4"        # Better assertion output
serial_test = "3.0"              # Sequential test execution

# Benchmarking
criterion = "0.5"                # Benchmarking framework

# Coverage (install separately: cargo install cargo-tarpaulin)
# cargo-tarpaulin provides code coverage reports

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "recurrence_benchmark"
harness = false
