[package]
name = "rust-calendar"
version = "1.4.5"
edition = "2021"
authors = ["Ken24T"]
description = "A modern cross-platform desktop calendar application with theming and event management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ken24T/rust-calendar"
keywords = ["calendar", "gui", "desktop", "events", "cross-platform"]
categories = ["gui", "date-and-time"]

[lib]
name = "rust_calendar"
path = "src/lib.rs"

[[bin]]
name = "rust-calendar"
path = "src/main.rs"

[dependencies]
# GUI Framework - Using egui for flexible immediate-mode UI
eframe = { version = "0.28", default-features = true }
egui = "0.28"
egui_extras = { version = "0.28", features = ["datepicker", "image"] }
png = "0.17"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# Recurrence rules (RFC 5545)
rrule = "0.11"

# Cross-platform desktop notifications
notify-rust = "4.10"

# iCalendar support
ical = "0.10"

# Configuration
toml = "0.8"
directories = "5.0"

# File handling
walkdir = "2.4"                  # Directory traversal

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
rfd = "0.15.4"

# URL opening
webbrowser = "1.0"
urlencoding = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# System theme detection
dark-light = "1.1"

# PDF generation
printpdf = "0.7"

[dev-dependencies]
# Testing frameworks
mockall = "0.12"                 # Mocking framework
tempfile = "3.10"                # Temporary files for tests
proptest = "1.4"                 # Property-based testing
test-case = "3.3"                # Parameterized tests

# Test utilities
pretty_assertions = "1.4"        # Better assertion output
serial_test = "3.0"              # Sequential test execution

# Benchmarking
criterion = "0.5"                # Benchmarking framework

# Coverage (install separately: cargo install cargo-tarpaulin)
# cargo-tarpaulin provides code coverage reports

[build-dependencies]
embed-resource = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Hide console window on Windows for release builds
[target.'cfg(windows)'.build-dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = [
    "Win32_UI_Notifications",
    "Win32_UI_Shell",
    "Win32_Foundation"
] }

[profile.dev]
opt-level = 0
debug = true

[[bench]]
name = "recurrence_bench"
harness = false
